--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "*.html",
+      "src": "**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/images/(.*)",
-      "dest": "/public/$1"
+      "src": "/(css|images|js)/(.*)",
+      "dest": "/$1/$2"
     },
     {
       "src": "/(.*)",
